--- a/t1.css
+++ b/t1.css
@@ -76,6 +76,9 @@ h1{
     text-decoration: none;
     color: #333333;
     text-transform: uppercase;
+    text-align: center;
+    display: inline-block;
+        vertical-align: top;
     /* font-family: 'Roboto', sans-serif; */
 }
 
@@ -86,7 +89,7 @@ h1{
     background-color: #333333;
     min-width: 230px;
     height: 60px;
-    vertical-align: top;
+   
     border-radius: 30px;
 }
 
@@ -115,13 +118,30 @@ h2 {
     margin: 0 0 45px;
 }
 
+.style {
+    position: relative;
+    padding: 0 0 0 44px;
+}
+
+.style::after {
+    content: '';
+    width: 42px;
+    height: 42px;
+    display: block;
+    position: absolute;
+    top: 10px;
+    left: 0;
+    background: url('./casino/about-logo.png')no-repeat center /cover;
+}
+
 .two-columns {
     display: flex;
     flex-wrap: wrap;
+    margin: 0 -20px;
 }
 
 .about-part {
-    padding: 120px;
+    padding: 120px 0;
 }
 .container {
     max-width: 1170px;
@@ -130,11 +150,44 @@ h2 {
 }
 .two-columns .col {
     width: 50%;
+    padding: 0 20px;
 
+}
+
+.two-columns .col.large-col {
+    width: 58.33%;
+}
+
+.two-columns .col.small-col {
+    width: 41.66%;
 }
 
 .about-part .image-wrap {
     position: relative;
-    width: 500px;
-    height: 345px;
+    /* width: 500px;
+    height: 345px; */
+    padding-top: 61%;
+    border-radius: 24px;
+    overflow: hidden;
 }
+
+.about-part p {
+    margin: 0;
+    color: #010304;
+}
+
+.about-part .btn-wrap {
+    margin-top: 60px;
+}
+
+.btn.secondary {
+    padding: 15px;
+    border: 2px solid #bf3d42;
+    color: #ffff;
+    background-color: #bf3d42;
+    min-width: 180px;
+    height: 60px;
+    
+    border-radius: 25px;
+}
+
